tryingdevToGit/force-app/main/default/objects/Customer__c/fields/Concert__c.field-meta.xml
<CustomField>
    <fullName>Concert__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Concert</label>
    <referenceTo>Concert__c</referenceTo>
    <relationshipLabel>Customers</relationshipLabel>
    <relationshipName>Customers</relationshipName>
    <type>Lookup</type>
</CustomField>