tryingdevToGit/force-app/main/default/objects/Customer__c/fields/Concert_Attended__c.field-meta.xml
<CustomField>
    <fullName>Concert_Attended__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Concert Attended</label>
    <type>Checkbox</type>
</CustomField>