tryingdevToGit/force-app/main/default/objects/Customer__c/fields/Future_Concert__c.field-meta.xml
<CustomField>
    <fullName>Future_Concert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Future Concert</label>
    <type>Checkbox</type>
</CustomField>