tryingdevToGit/force-app/main/default/objects/Customer__c/fields/UniqueCust_ID__c.field-meta.xml
<CustomField>
    <fullName>UniqueCust_ID__c</fullName>
    <label>UniqueCust ID</label>
    <length>6</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>